@@ -44,9 +44,10 @@
 #             - Remove passwords from logging
 # 181216-1210 - Add PrgVersion
 #             - Add tests for file exists
+# 181227-1030 - Allow table names with whitespaces
 #
 
-$PrgVersion = "2.9.1";
+$PrgVersion = "2.9.2";
 
 ###### Test that the script is running only once a time
 use Fcntl qw(:flock);
@@ -530,14 +531,14 @@ if ( ($without_db < 1) && ($conf_only < 1) )
 			else {
 				foreach ( @all_tables ){
 					if ($DBX) {
-						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname `$_` | $xzbin -3 -T0 - > $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$_$underl$wday.sql.xz\n";
+						print "$mysqldumpbin --user=$VARDB_backup_user --password=XXXX --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$VARserver_ip$underl$temp_dbname$underl$_$underl$wday.sql.xz'\n";
 					}
-					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname `$_` | $xzbin -3 -T0 - > $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$_$underl$wday.sql.xz`;
+					`$mysqldumpbin --user=$VARDB_backup_user --password=$VARDB_backup_pass --lock-tables --flush-logs --routines $temp_dbname '$_' | $xzbin -3 -T0 - > '$TEMPpath/$VARserver_ip$underl$temp_dbname$underl$_$underl$wday.sql.xz'`;
 				}
 				if ($DBX) {
-					print "$tarbin -cf $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$wday$tar $TEMPpath/*.sql.xz`\n";
+					print "$tarbin -cf $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$wday$tar '$TEMPpath/*.sql.xz'`\n";
 				}
-				`$tarbin -cf $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$wday$tar $TEMPpath/*.sql.xz`;
+				`$tarbin -cf $TEMPpath/$VARserver_ip$underl$temp_dbname$underl$wday$tar '$TEMPpath/*.sql.xz'`;
 				`rm $TEMPpath/*.sql.xz`;
 			}
 			$c++;
