@@ -328,6 +328,9 @@
   * bin/ADMIN_backup.pl: Use tar | xy for packing; Pack database tables in own
        files; Remove passwords from logging, add tests for file exists.
   * New bin/ADMIN_backup_ng.pl.
+  * Allow table names with whitespaces:
+    - Update bin/ADMIN_backup.pl,
+        bin/ADMIN_backup_ng.pl.
   
 2.25.27
   [Jörg Fring-Fürst]
